--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h2 {
 body { 
 	margin: 0;
 	padding: 0;
-	background-image: url("images/background.jpg");
+	background-image: url("background.jpg");
 	background-attachment: fixed;
 	background-size: 100%;
 }
